src/BlazorUI/Bit.BlazorUI/Components/Dialog/BitDialog.scss
@import "../../Styles/functions.scss";

.bit-dlg {
    inset: 0;
    width: 100%;
    height: 100%;
    position: fixed;
    font-weight: 400;
    z-index: $zindex-modal;
    font-size: spacing(1.75);
    font-family: $typography-font-family;
}

.bit-dlg-nta {
    touch-action: none;

    * {
        touch-action: none;
    }
}

.bit-dlg-abs {
    z-index: unset;
    position: absolute;
}

.bit-dlg-doc {
    opacity: 1;
    width: 100%;
    height: 100%;
    display: flex;
    position: absolute;
    pointer-events: auto;
    background-color: transparent;
    transition: opacity 300ms ease 0s;
}

.bit-dlg-ovl {
    inset: 0;
    z-index: 0;
    position: absolute;
    background-color: $color-background-overlay;
}

.bit-dlg-ctn {
    max-width: 100%;
    position: absolute;
    box-sizing: border-box;
    box-shadow: $box-shadow-callout;
    border-radius: $shape-border-radius;
    background-color: $color-background-primary;
}

.bit-dlg-hdr {
    top: 0;
    z-index: 1;
    display: flex;
    position: sticky;
    align-items: center;
    overflow-wrap: anywhere;
    background-color: $color-background-primary;
    padding: spacing(2) spacing(2) spacing(2.5) spacing(3);
}

.bit-dlg-ttl {
    margin: 0;
    font-weight: 600;
    line-height: normal;
    font-size: spacing(2.5);
    min-height: spacing(2.5);
    color: $color-foreground-primary;
}

.bit-dlg-scr-cnt {
    flex-grow: 1;
    display: flex;
    overflow-y: auto;
    max-height: 100vh;
    flex-direction: column;
}

.bit-dlg-msg {
    font-weight: 400;
    line-height: 1.5;
    font-size: spacing(1.75);
    overflow-wrap: break-word;
    margin: 0 spacing(3) spacing(3);
    color: $color-foreground-secondary;
}

.bit-dlg-bct {
    bottom: 0;
    z-index: 1;
    display: flex;
    position: sticky;
    align-items: center;
    justify-content: flex-end;
    padding: 0 spacing(3) spacing(3);
    background-color: $color-background-primary;

    button {
        cursor: pointer;
        text-decoration: none;
        min-width: spacing(8);
        min-height: spacing(4);
        box-sizing: border-box;
        margin: 0 spacing(0.5);
        font-size: spacing(1.75);
        padding: spacing(0.5) spacing(2);
        border-width: $shape-border-width;
        border-style: $shape-border-style;
        border-radius: $shape-border-radius;
        font-family: $typography-font-family;
        font-weight: $typography-font-weight;
    }
}

.bit-dlg-pri {
    color: $color-primary-text;
    border-color: $color-primary-main;
    background-color: $color-primary-main;

    @media (hover: hover) {
        &:hover {
            border-color: $color-action-hover-primary;
            background-color: $color-action-hover-primary;
        }
    }

    &:active {
        border-color: $color-action-active-primary;
        background-color: $color-action-active-primary;
    }
}

.bit-dlg-std {
    color: $color-secondary-text;
    border-color: $color-border-primary;
    background-color: $color-secondary-main;

    @media (hover: hover) {
        &:hover {
            background-color: $color-action-hover-secondary;
        }
    }

    &:active {
        background-color: $color-action-active-secondary;
    }
}

.bit-dlg-cls {
    border: none;
    cursor: pointer;
    font-weight: 400;
    width: spacing(4);
    margin-left: auto;
    height: spacing(4);
    align-self: normal;
    text-align: center;
    display: inline-block;
    text-decoration: none;
    box-sizing: border-box;
    padding: 0 spacing(0.5);
    font-size: spacing(1.75);
    border-radius: spacing(0.25);
    background-color: transparent;
    color: $color-foreground-primary;

    span {
        height: 100%;
        display: flex;
        flex-wrap: nowrap;
        align-items: center;
        justify-content: center;

        i {
            margin: 0 spacing(0.5);
        }
    }

    @media (hover: hover) {
        &:hover {
            color: $color-action-hover-foreground-primary;
            background-color: $color-action-hover-background-primary;
        }
    }

    &:active {
        color: $color-action-active-foreground-primary;
        background-color: $color-action-active-background-primary;
    }
}

.bit-dlg-ctr {
    align-items: center;
    justify-content: center;
}

.bit-dlg-tl {
    align-items: flex-start;
    justify-content: flex-start;
}

.bit-dlg-tc {
    align-items: flex-start;
    justify-content: center;
}

.bit-dlg-tr {
    align-items: flex-start;
    justify-content: flex-end;
}

.bit-dlg-cl {
    align-items: center;
    justify-content: flex-start;
}

.bit-dlg-cr {
    align-items: center;
    justify-content: flex-end;
}

.bit-dlg-bl {
    align-items: flex-end;
    justify-content: flex-start;
}

.bit-dlg-bc {
    align-items: flex-end;
    justify-content: center;
}

.bit-dlg-br {
    align-items: flex-end;
    justify-content: flex-end;
}

